--- a/manifest.json
+++ b/manifest.json
@@ -1,27 +1,28 @@
 {
   "name": "BabysFirstModpackLethalCompany",
-  "version_number": "1.2.0",
+  "version_number": "1.3.0",
   "website_url": "",
   "description": "A modpack of the best character, item, skin, and QOL mods - so you don't have to do it yourself (lethal company edition)",
   "dependencies": [
      "Tiger_Frog-TigerFasionSuits-1.0.6",
-     "Evaisa-LethalLib-0.10.1",
+     "Evaisa-LethalLib-0.10.3",
      "Evaisa-LethalThings-0.8.8",
-     "ViViKo-MoreMaterials-1.3.0",
+     "ViViKo-MoreMaterials-1.3.1",
      "Sligili-More_Emotes-1.2.2",
      "x753-More_Suits-1.4.1",
-     "notnotnotswipez-MoreCompany-1.7.2",
-     "RugbugRedfern-Skinwalkers-2.0.1",
+     "notnotnotswipez-MoreCompany-1.7.4",
+     "RugbugRedfern-Skinwalkers-2.0.5",
      "Midge-PushCompany-1.2.0",
      "FlipMods-FasterItemDropship-1.2.1",
      "Evaisa-HookGenPatcher-0.0.5",
      "BepInEx-BepInExPack-5.4.2100",
+     "Fam-BabysFirstModpackLethalCompany-1.2.0",
      "TwinDimensionalProductions-CoilHeadStare-1.0.3",
      "FlipMods-ObjectVolumeController-1.0.3",
      "taffyko-BetterSprayPaint-1.1.0",
      "5Bit-VoiceHUD-1.0.4",
-     "quackandcheese-MirrorDecor-1.2.2",
-     "Hexnet111-SuitSaver-1.1.2",
+     "quackandcheese-MirrorDecor-1.2.3",
+     "Hexnet111-SuitSaver-1.1.4",
      "Verity-TooManySuits-1.0.5",
      "FlipMods-BetterStamina-1.3.2",
      "EliteMasterEric-Coroner-1.5.3",
@@ -30,13 +31,17 @@
      "ViViKo-BreakingBadHazmatSuit-1.0.3",
      "TeamClark-Vault_Boy_Suit-1.0.0",
      "Flamango-OmniMan_Base_Suits-1.0.0",
-     "taffyko-NameplateTweaks-1.0.5",
-     "Spyci-CozyImprovements-1.2.0",
+     "taffyko-NameplateTweaks-1.0.6",
+     "Spyci-CozyImprovements-1.2.1",
      "femboytv-LethalPaintings-1.2.0",
      "femboytv-LethalPosters-1.2.0",
      "femboytv-LethalGosling-1.0.1",
      "sunnobunno-YippeeMod-1.2.2",
      "Renegades-WalkieUse-1.4.0",
-     "TheFluff-FairAI-1.2.6"
+     "TheFluff-FairAI-1.2.8",
+     "RickArg-Helmet_Cameras-2.1.5",
+     "AinaVT-LethalConfig-1.3.4",
+     "Gemumoddo-LethalEmotesAPI-1.1.8",
+     "Gemumoddo-BadAssCompany-1.0.4"
   ]
 }
